...


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:id="@+id/rgYearChoice">

            <RadioButton
                android:id="@+id/rbOneYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbThreeYear"
                android:layout_weight="1"
                android:textStyle="bold" />


            <RadioButton
                android:id="@+id/rbFiveYear"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

        </RadioGroup>
...
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/spinNumber"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
...
            </TextView>

            <Spinner
                android:id="@+id/spinNumber"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tvCompDesc"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="12dp"
                android:layout_toStartOf="@+id/tvEstimatedProfit"
...
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvCompDesc"
                android:layout_width="358dp"
                android:layout_height="104dp"
                android:layout_above="@+id/btnWebView"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
...
