<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002171"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bgVideoView"
        app:layout_constraintVertical_bias="0.731" />

    <EditText
        android:id="@+id/teAmountEnteredToInvest"
        android:layout_width="301dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
...
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877"
        android:nextFocusDown="@+id/btnConfirmAmountEnteredToInvest"/>

    <Button
        android:id="@+id/btnConfirmAmountEnteredToInvest"
        android:background="@drawable/button_bg_rounded_corners"
        android:layout_width="188dp"
        android:layout_height="52dp"
...
