<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    >


    <item
        android:id="@+id/about_us_id"
        android:title="About us"
        app:showAsAction="never"
        android:orderInCategory="100" />


</menu>