<resources>
    <string name="app_name">Investify</string>
    <string name="investify">Investify</string>
    <string name="amount_you_want_to_invest">Amount you want to invest</string>
    <string name="check_possible_profits">Projected profits</string>
    <string name="estimated_profit">Estimated Profit*</string>
    <string name="year">Year(s)</string>
    <string name="chart_desc">The company performance chart</string>
    <string name="about_asset">About asset management firms</string>
    <string name="what_are">What are asset management firms ?</string>
    <string name="simply_put">Simply put, asset management firms manage funds for individuals and companies. They make well-timed investment decisions on behalf of their clients to grow their finances and portfolio. Working with a group of several investors, asset management firms are able to diversify their clients’ portfolios. This gives them access to higher value options with better capital ap
...
